# panasonicVieraRemoteControlQt

./: .clang-format  .clang-tidy  .cmake-format.yaml  CMakeLists.txt  README.md  lgtm.yml
.github/workflows/: build_release.yml  clang-format.yml  codacy-analysis.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  connecttotv.cpp  connecttotv.hpp  vieraprotocol.cpp  vieraprotocol.hpp
src/gui/: CMakeLists.txt  mainwidget.cpp  mainwidget.hpp  mainwidgetcontroller.cpp  mainwidgetcontroller.hpp
src/gui/res/forms/: mainwidget.ui
tests/: CMakeLists.txt
tests/cmake/: StandardProjectSettings.cmake
tests/dependencies/: CMakeLists.txt
tests/ut/: CMakeLists.txt  vieraprotocoltest.cpp
